--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 theme: jekyll-theme-cayman
 github:
   is_project_page: false
-output:
-  html_document:
-    keep_md: TRUE
+avatar: "https://www.aquantum.es/wp-content/uploads/2019/11/logo_aquantum.png"
