--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 github:
   is_project_page: false
-avatar: "https://www.aquantum.es/wp-content/uploads/2019/11/logo_aquantum.png"
+avatar_url: "https://www.aquantum.es/wp-content/uploads/2019/11/logo_aquantum.png"
